--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -17,7 +17,7 @@
             background-image: url(imagens/wallpaper006.jpg);
             background-position: top;
             background-repeat: no-repeat;
-            background-size: auto;
+            background-size: cover;
         }
 
         main {
