--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
             height: 98vh;
 
-            background-color: black;
+            /*background-color: black;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
-            background-image: url(imagens/wallpaper006.jpg);
+            background-image: url(imagens/wallpaper002.jpg);
             background-position: top;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* Shorthand - background
+                color > imagem > position > repeat > attachment.
+            */
+
+            background: black url(imagens/wallpaper002.jpg) top no-repeat fixed;
             background-size: cover;
         }
 
         main {
+            margin: auto;
             background-color: aliceblue;
-            width: 500px;
+            max-width: 500px;
             padding: 10px;
             border: 2px solid rgba(0, 0, 0, 0.486);
             border-radius: 10px;
@@ -38,6 +43,11 @@
     <main>
         <h1>Teste de imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates labore quae iure vitae veritatis aut harum enim porro temporibus ut ex consequatur aperiam, eos id laboriosam quod eaque hic itaque? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur in mollitia accusamus esse debitis, dolorum modi aliquid ullam delectus, quis fuga sapiente optio sit assumenda! Quam dignissimos voluptatibus consectetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam velit ullam beatae sint id pariatur veritatis, aspernatur rem eveniet expedita, corporis deleniti repellat qui voluptatum nesciunt quae dolorum vel? Ex!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates labore quae iure vitae veritatis aut harum enim porro temporibus ut ex consequatur aperiam, eos id laboriosam quod eaque hic itaque? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur in mollitia accusamus esse debitis, dolorum modi aliquid ullam delectus, quis fuga sapiente optio sit assumenda! Quam dignissimos voluptatibus consectetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam velit ullam beatae sint id pariatur veritatis, aspernatur rem eveniet expedita, corporis deleniti repellat qui voluptatum nesciunt quae dolorum vel? Ex!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates labore quae iure vitae veritatis aut harum enim porro temporibus ut ex consequatur aperiam, eos id laboriosam quod eaque hic itaque? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur in mollitia accusamus esse debitis, dolorum modi aliquid ullam delectus, quis fuga sapiente optio sit assumenda! Quam dignissimos voluptatibus consectetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam velit ullam beatae sint id pariatur veritatis, aspernatur rem eveniet expedita, corporis deleniti repellat qui voluptatum nesciunt quae dolorum vel? Ex!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates labore quae iure vitae veritatis aut harum enim porro temporibus ut ex consequatur aperiam, eos id laboriosam quod eaque hic itaque? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur in mollitia accusamus esse debitis, dolorum modi aliquid ullam delectus, quis fuga sapiente optio sit assumenda! Quam dignissimos voluptatibus consectetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam velit ullam beatae sint id pariatur veritatis, aspernatur rem eveniet expedita, corporis deleniti repellat qui voluptatum nesciunt quae dolorum vel? Ex!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates labore quae iure vitae veritatis aut harum enim porro temporibus ut ex consequatur aperiam, eos id laboriosam quod eaque hic itaque? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur in mollitia accusamus esse debitis, dolorum modi aliquid ullam delectus, quis fuga sapiente optio sit assumenda! Quam dignissimos voluptatibus consectetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam velit ullam beatae sint id pariatur veritatis, aspernatur rem eveniet expedita, corporis deleniti repellat qui voluptatum nesciunt quae dolorum vel? Ex!</p>
+
     </main>
 </body>
 </html>
